log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: ping-pong # k3d necessary
              topologyKey: kubernetes.io/hostname

      volumes: # Define volume
        - name: shared-files
          emptyDir: {}
        - name: ping-pong-pv
          persistentVolumeClaim:
            claimName: ping-pong-pvc
        - name: log-output-config-volumn
          configMap:
            name: log-output-config
            items:
            - key: information.txt
              path: information.txt

      containers:
        - name: log-output-generator
          image: log-output-generator:1.1
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/random-string-dir
        - name: log-output-server
          image: log-output-server:1.3
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/random-string-dir
            - name: ping-pong-pv
              mountPath: /usr/src/app/ping-pong-pv
            - name: log-output-config-volumn
              mountPath: /usr/src/app/config
